feat: ActualizaciÃ³n completa del sistema de inventario con mejoras en autenticaciÃ³n, cache y optimizaciones

--- a/pytest.ini
+++ b/pytest.ini
@@ -16,9 +16,11 @@ addopts =
 markers =
     unit: Unit tests
     integration: Integration tests
-    slow: Slow tests
+    slow: Slow running tests
     auth: Authentication tests
-    registros: Registro tests
+    database: Database tests
+    api: API tests
+    services: Service layer tests
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning 
